--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -7,8 +7,10 @@
    "ReqDelDate": "Req. Del Date",
    "qtyReq": "Qty Required",
    "allocated": "Allocated",
+   "balance_th": "Theorical Balance",
    "balance": "Balance",
    "customer": "Customer",
+   "customer_name": "Customer Name",
    "CONumber": "CO Number",
    "COType": "CO Type",
    "noData": "No data available",
@@ -34,7 +36,7 @@
    "next_order_number": "Next Order Number",
    "next_order_qty": "Next Order quantity",
    "StockWHS": "Stock Warehouse",
-   "StockPRD": "Stock Product",
+   "StockPRD": "Safety Stock",
    "ITDS" : "Name",
    "CUNO" : "Customer Order",
    "Forecast" : "Forecast",
