--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -7,8 +7,10 @@
    "ReqDelDate": "Date Liv. Dem",
    "qtyReq": "Qté Requise",
    "allocated": "Alloué",
-   "balance": "Solde",
+   "balance_th": "Balance Théorique",
+   "balance": "Balance",
    "customer": "Client",
+   "customer_name": "Nom Client",
    "CONumber": "Numero Com. Client",
    "COType": "Type Comde. Client",
    "noData": "Aucune donnée disponible",
@@ -34,7 +36,7 @@
    "next_order_number": "Numéro prchne comde",
    "next_order_qty": "Quantité prchne comde",
    "StockWHS": "Stock entrepôt",
-   "StockPRD": "Stock produit",
+   "StockPRD": "Stock sécurité",
    "ITDS" : "Nom",
    "CUNO" : "Commande Client",
    "Forecast" : "Prévision",
