Change FR Vision forecast

--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -1,5 +1,5 @@
 {
-   "VISION_FORECAST": "Prévision visuelle",
+   "VISION_FORECAST": "Vision prévision",
    "list_api" : "Les API utilisées dans le programme sont les suivantes",
    "copyright":"Copyright © 2025 Infor. Tous droits réservés. Les termes et logos mentionnés dans ce document sont des marques commerciales et/ou des marques déposées d'Infor et/ou de ses filiales. Toutes les autres marques citées ici appartiennent à leurs détenteurs respectifs.",
    "filter": "Filtre et entête de données",
